--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
